Appointment issues fixed

--- a/src/main/resources/static/emergency.html
+++ b/src/main/resources/static/emergency.html
@@ -89,7 +89,7 @@
             <h2>Hospital Information</h2>
             <div class="hospital">
                 <p><strong>Hospital Name:</strong> Vijay Group of Hospital</p>
-                <p><strong>Address:</strong> 123 Anna Street, Ghandhi Nagar, Chennai-600034, Tamilnadu</p>
+                <p><strong>Address:</strong> 123, Anna Street, Gandhi Nagar, Chennai-600034, Tamilnadu</p>
             </div>
         </section>
 
@@ -97,7 +97,7 @@
             <h2>24/7 Helpline Numbers</h2>
             <ul>
                 <li><strong>Emergency Services:</strong> 108</li>
-                <li><strong>Receptionist:</strong> +044 1334 5778 / 5779</li>
+                <li><strong>Receptionist:</strong> 044 1334 5778 / 5779</li>
                 <!-- Add more emergency helpline numbers here -->
             </ul>
         </section>
